updated colour theme

--- a/index.html
+++ b/index.html
@@ -5,24 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aqdun-Nikaah & Waleematun-Nikaah</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@400;700&family=Great+Vibes&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="invitation-container gold-border">
-      <!-- Decorative floral SVGs for corners and top center -->
-      <!-- <img
-        src="https://svgshare.com/i/13kA.svg"
-        class="floral-corner floral-top"
-        alt="Top left floral corner (roses, eucalyptus)"
-        aria-hidden="true"
-      /> -->
+      <!-- Decorative floral images for all four corners (uncomment if needed)
+      <img src="flower2.png" class="floral-corner floral-top-left" alt="Top left floral corner (roses, eucalyptus)" aria-hidden="true" />
+      <img src="flower2.png" class="floral-corner floral-top-right" alt="Top right floral corner (roses, eucalyptus)" aria-hidden="true" />
+      <img src="flower2.png" class="floral-corner floral-bottom-left" alt="Bottom left floral corner (roses, eucalyptus)" aria-hidden="true" />
+      <img src="flower2.png" class="floral-corner floral-bottom-right" alt="Bottom right floral corner (roses, eucalyptus)" aria-hidden="true" />
+      -->
 
+      <!-- Bismillah (Opening Blessing) -->
       <div class="bismillah">
-        IN THE NAME OF ALLAH THE MOST BENEFICENT AND THE MOST MERCIFUL
+        IN THE NAME OF ALLAH <br />
+        THE MOST BENEFICENT, THE MOST MERCIFUL
       </div>
+
+      <!-- Families Section -->
       <div class="families">
         The Families of<br />
         <strong>Alhaji Aremu Ayuba Adewale</strong><br />
@@ -31,38 +34,80 @@
         <strong>Alhaji Kehinde Sulaimon</strong> <br />
         (Chief Imam of Owu Kingdom)
       </div>
+
+      <!-- Invitation Subtitle -->
       <div class="subtitle">Request The Honour Of Your Presence At The</div>
+
+      <!-- Main Title (Event Name) -->
       <div class="main-title">
         <span class="icon-ring">💍</span>
         Aqdun-Nikaah &amp; Waleematun-Nikaah
         <span class="icon-ring">💍</span>
       </div>
+
+      <!-- Subtitle for Children -->
       <div class="subtitle">Of their beloved Children</div>
+
+      <!-- Couple's Names (English) -->
       <div class="names">
         Maryam Atinuke
-        <span class="and-heart">&#10084;&#65039;</span>
+        <span class="and-heart">&</span>
         Mubarak Abolore
       </div>
+
+      <!-- Couple's Names (Arabic) -->
+      <h1 class="names">
+        مبارك
+        <span class="and-heart">&</span>
+        مريم
+      </h1>
+
+      <!-- Event Details -->
       <div class="details">
         WHICH WILL INSHA ALLAH TAKE PLACE AS FOLLOWS<br />
-        <strong>Saturday, May 9, 2026</strong><br />
+        <strong>Saturday, May 9, 2026.</strong><br />
         @ 10:00am
       </div>
+
+      <!-- Venue Information -->
       <div class="venue">
-        Toslado Event Centre Olomoore<br />
-        Abeokuta Ogun State
+        *********** Event Centre , #########<br />
+        Sango-Ota, Ogun State.
       </div>
+
+      <!-- Colour of the Day -->
       <div class="color-day">
         <span class="icon-flower">🌸</span>
         COLOUR OF THE DAY: Lilac and Olive green
         <span class="icon-flower">🌸</span>
       </div>
+
+      <!-- RSVP Section -->
       <div class="rsvp">
-        <strong>RSVP</strong> <br />
-        <strong>Bride: </strong> Itunnu | 0906 572 7618
-        <br />
-        <strong>Groom: </strong>Abdul-Muiz | 0814 493 6970
+        <h3>RSVP</h3>
+
+        <div class="rsvp-container">
+          <div class="rsvp-column">
+            <div class="rsvp-title">Bride’s Family</div>
+            <p>Itunnu — 0906 572 7618</p>
+            <p>Abdul-Muiz — 0812 307 8333</p>
+          </div>
+
+          <div class="rsvp-column">
+            <div class="rsvp-title">Groom’s Family</div>
+            <p>
+              Abdul- Hameed -<br />
+              0703 482 1017
+            </p>
+            <p>
+              Abdul-Muiz -<br />
+              0814 493 6970
+            </p>
+          </div>
+        </div>
       </div>
+
+      <!-- Note and Dua (Blessing) -->
       <div class="note-box">
         <strong>This Event is STRICTLY by Invitation</strong> and access card
         will serve as the ONLY means of entry
